--- a/LoginAndRegister/pom.xml
+++ b/LoginAndRegister/pom.xml
@@ -58,15 +58,16 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>8086</port>
-                    <server>tomcat7</server>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--    <groupId>org.apache.tomcat.maven</groupId>-->
+            <!--    <artifactId>tomcat7-maven-plugin</artifactId>-->
+            <!--    <version>2.2</version>-->
+            <!--    <configuration>-->
+            <!--        <port>8086</port>-->
+            <!--        <path>/</path>-->
+            <!--        <server>tomcat7</server>-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
