--- a/springTrain/pom.xml
+++ b/springTrain/pom.xml
@@ -26,5 +26,10 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.13-SNSAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
