--- a/springTrain/pom.xml
+++ b/springTrain/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.10.RELEASE</version>
+            <version>5.3.23</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -30,6 +30,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.2.13-SNSAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 </project>
