--- a/springTrain/pom.xml
+++ b/springTrain/pom.xml
@@ -56,5 +56,10 @@
             <artifactId>spring-test</artifactId>
             <version>5.3.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.9.1</version>
+        </dependency>
     </dependencies>
 </project>
