--- a/experiment/bootDemo/src/main/resources/application.yml
+++ b/experiment/bootDemo/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
 mybatis-plus:
   global-config:
     banner: false
+  # 下面是打开sql语句输出
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
