--- a/codeLearning/pom.xml
+++ b/codeLearning/pom.xml
@@ -15,53 +15,60 @@
     </properties>
 
     <dependencies>
+        <!--mySQL数据驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
-        <!--        德鲁伊数据库连接池-->
+        <!--德鲁伊数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.2.13-SNSAPSHOT</version>
         </dependency>
-        <!--        dom4j是xml分析工具-->
+        <!--dom4j是xml分析工具-->
         <dependency>
             <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>2.1.3</version>
         </dependency>
-        <!--        用xpath解析xml,基于dom4j-->
+        <!--用xpath解析xml,基于dom4j-->
         <dependency>
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version>
         </dependency>
-        <!--        logback日志框架依赖1-->
+        <!--logback日志框架依赖1-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.3</version>
         </dependency>
-        <!--        logback日志框架依赖2-->
+        <!--logback日志框架依赖2-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>1.4.4</version>
         </dependency>
-        <!--        logback日志框架依赖3-->
+        <!--logback日志框架依赖3-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.4.4</version>
         </dependency>
-        <!--        单元测试框架-->
+        <!--单元测试框架-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>compile</scope>
+        </dependency>
+        <!--图片尺寸修改-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.18</version>
         </dependency>
     </dependencies>
 </project>
