--- a/experiment/jsonToCsv/pom.xml
+++ b/experiment/jsonToCsv/pom.xml
@@ -7,6 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>jsonToCsv</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <!-- 设置项目的语言级别为17-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <name>JSON转CSV样例</name>
     <description>一个测试csv与json专用的工程</description>
 
