--- a/snakeGame/pom.xml
+++ b/snakeGame/pom.xml
@@ -52,6 +52,43 @@
                     </archive>
                 </configuration>
             </plugin>
+            <!-- 将依赖一起打包-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <!-- 不生成dependency-reduced-pom.xml文件-->
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <!-- 配置主类-->
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>jade.MainWindow</mainClass>
+                                </transformer>
+                            </transformers>
+                            <artifactSet/>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*:*</artifact>
+                                    <!-- 排除以下文件，防止程序启动启动时，校验错误  -->
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
