--- a/experiment/TesFreeMarker/pom.xml
+++ b/experiment/TesFreeMarker/pom.xml
@@ -23,5 +23,12 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.31</version>
         </dependency>
+        <!-- lombok注解式简化代码编写-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
