--- a/interest/demoFx/pom.xml
+++ b/interest/demoFx/pom.xml
@@ -47,7 +47,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>mix.jade.demofx/mix.jade.demofx.HelloApplication</mainClass>
+                            <mainClass>mix.jade/mix.jade.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
