--- a/interest/downM3u8/pom.xml
+++ b/interest/downM3u8/pom.xml
@@ -7,6 +7,8 @@
     <groupId>mix</groupId>
     <artifactId>downM3u8</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>下载m3u8</name>
+    <description>下载m3u8的工具</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -24,6 +26,21 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                </configuration>
+            </plugin>
+            <!-- 指定启动类-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>mix.Main</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
