--- a/experiment/chat/src/main/resources/application.properties
+++ b/experiment/chat/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 logging.pattern.dateformat=HH:mm:ss
 server.port=23042
-spring.servlet.multipart.max-file-size=2048MB
+# max down file size
+spring.servlet.multipart.max-file-size=4096MB
+# max upload file size
+spring.servlet.multipart.max-request-size=2048MB
+server.tomcat.max-swallow-size=2048MB
+
