--- a/experiment/payment/src/main/resources/application.yml
+++ b/experiment/payment/src/main/resources/application.yml
@@ -19,5 +19,5 @@ mybatis-plus:
     banner: false
   mapper-locations: classpath:com/demo/mapper/*.xml
   # 下面是打开sql语句输出
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
