日志配置优化

--- a/bootLearn/bootDemo/src/main/resources/application.yml
+++ b/bootLearn/bootDemo/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
   main:
     banner-mode: off
 
+logging:
+  pattern:
+    dateformat: HH:mm:ss
+
 mybatis-plus:
   global-config:
     banner: false
