--- a/libLearn/csvAndXml/pom.xml
+++ b/libLearn/csvAndXml/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>csvAndXml</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>处理csv和xml</name>
-    <description>一个专门处理csv和xml的工程</description>
+    <description>一个专门处理csv、xml、json的工程</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -41,6 +41,12 @@
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <!--jackson读取json工具-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.3</version>
         </dependency>
     </dependencies>
 
