--- a/webLearn/webTomcat/pom.xml
+++ b/webLearn/webTomcat/pom.xml
@@ -43,6 +43,22 @@
                     </packagingExcludes>
                 </configuration>
             </plugin>
+            <!-- 在打包前自动clean-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <!-- 绑定到validate阶段 -->
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!--打包时执行自定义脚本-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
