--- a/libLearn/tesTess4J/pom.xml
+++ b/libLearn/tesTess4J/pom.xml
@@ -29,11 +29,17 @@
         </plugins>
     </build>
     <dependencies>
-        <!-- 文字识别：Tesseract OCR with Tess4J-->
+        <!-- 文字识别(低准确率)：Tesseract OCR with Tess4J-->
         <dependency>
             <groupId>net.sourceforge.tess4j</groupId>
             <artifactId>tess4j</artifactId>
             <version>5.15.0</version>
+        </dependency>
+        <!--用于百度：jackson读取json工具-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.3</version>
         </dependency>
     </dependencies>
 </project>
