--- a/webLearn/webTomcat/pom.xml
+++ b/webLearn/webTomcat/pom.xml
@@ -11,6 +11,7 @@
     <packaging>war</packaging>
 
     <properties>
+        <!--此处的Java版本要和电脑上配置的JDK版本对的上-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -29,6 +30,16 @@
         <!-- 最终打包为ROOT.war -->
         <finalName>ROOT</finalName>
         <plugins>
+            <!-- 设置项目的语言级别为17-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
             <!--打包插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
