--- a/cloudLearn/cloud-demo/order-service/pom.xml
+++ b/cloudLearn/cloud-demo/order-service/pom.xml
@@ -26,6 +26,11 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <!--feign，其版本号在父依赖的spring-cloud-dependencies中-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
