--- a/cloudLearn/cloud-demo/user-service/pom.xml
+++ b/cloudLearn/cloud-demo/user-service/pom.xml
@@ -26,5 +26,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <!--Nacos服务注册与发现,不打这个的话feign无效-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 </project>
