--- a/cloudLearn/cloud-demo/order-service/src/main/resources/application.yml
+++ b/cloudLearn/cloud-demo/order-service/src/main/resources/application.yml
@@ -22,6 +22,6 @@ mybatis:
     map-underscore-to-camel-case: true # 下划线转驼峰
 logging:
   level:
-    mix: debug
+    mix.order.mapper: debug # sql日志打印
   pattern:
-    dateformat: MM-dd HH:mm:ss:SSS
+    dateformat: MM-dd HH:mm:ss
