--- a/libLearn/genCodeUtil/pom.xml
+++ b/libLearn/genCodeUtil/pom.xml
@@ -25,11 +25,12 @@
             <scope>runtime</scope>
         </dependency>
         <!--Oracle驱动-->
-        <!--<dependency>-->
-        <!--    <groupId>com.oracle.database.jdbc</groupId>-->
-        <!--    <artifactId>ojdbc8</artifactId>-->
-        <!--    <scope>runtime</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.9.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
         <!--mybatis-plus基础包-->
         <dependency>
             <groupId>com.baomidou</groupId>
