--- a/libLearn/ddlExcel/pom.xml
+++ b/libLearn/ddlExcel/pom.xml
@@ -50,6 +50,12 @@
             <version>4.13.1</version>
             <scope>compile</scope>
         </dependency>
+        <!-- freemarker模板引擎-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.34</version>
+        </dependency>
     </dependencies>
 
     <build>
